@@ -60,7 +60,8 @@ init_options(struct program_options *options)
            (DFLT_OPT_CROSSFSBOUNDARIES == OPT_CROSSFSBOUNDARIES));
     assert((DFLT_OPT_DIRSINCLUDE == OPT_NOEMPTYDIRS) ||
            (DFLT_OPT_DIRSINCLUDE == OPT_EMPTYDIRS) ||
-           (DFLT_OPT_DIRSINCLUDE == OPT_DNREMPTY));
+           (DFLT_OPT_DIRSINCLUDE == OPT_DNREMPTY) ||
+           (DFLT_OPT_DIRSINCLUDE == OPT_ALLDIRS));
     assert(DFLT_OPT_DIR_DEPTH >= OPT_NODIRDEPTH);
     assert((DFLT_OPT_LEAFDIRS == OPT_NOLEAFDIRS) ||
            (DFLT_OPT_LEAFDIRS == OPT_LEAFDIRS));
